--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "yeoman-generator": "^1.0.0",
     "chalk": "^1.1.3",
+    "request": "^2.81.0",
     "yosay": "^2.0.0"
   },
   "jest": {
