--- a/package.json
+++ b/package.json
@@ -19,19 +19,19 @@
     "yeoman-generator"
   ],
   "devDependencies": {
-    "yeoman-test": "^1.6.0",
-    "yeoman-assert": "^3.0.0",
-    "nsp": "^2.6.3",
     "eslint": "^3.18.0",
     "eslint-config-xo-space": "^0.16.0",
     "jest": "^19.0.2",
-    "jest-cli": "^19.0.1"
+    "jest-cli": "^19.0.1",
+    "nsp": "^2.8.1",
+    "yeoman-assert": "^3.1.1",
+    "yeoman-test": "^1.7.0"
   },
   "dependencies": {
-    "yeoman-generator": "^1.0.0",
     "chalk": "^1.1.3",
-    "request": "^2.81.0",
-    "yosay": "^2.0.0"
+    "request": "^2.85.0",
+    "yeoman-generator": "^1.0.0",
+    "yosay": "^2.0.2"
   },
   "jest": {
     "testEnvironment": "node"
